--- a/css/main.css
+++ b/css/main.css
@@ -1096,6 +1096,14 @@ video {
   transform: rotate(180deg) translateX(-3px);
 }
 
+@media only screen and (max-width: 1300px) {
+  .post-wrap .post-next {
+    right: -60px;
+  }
+  .post-wrap .post-prev {
+    left: -60px;
+  }
+}
 @media only screen and (max-width: 1100px) {
   .aside {
     position: fixed;
@@ -1226,6 +1234,23 @@ video {
   }
   .modal_btn {
     width: 240px;
+  }
+  .post-wrap .post-next {
+    right: -100px;
+  }
+  .post-wrap .post-prev {
+    left: -100px;
+  }
+}
+@media only screen and (max-width: 900px) {
+  .post-wrap {
+    padding: 0 80px;
+  }
+  .post-wrap .post-next {
+    right: 0px;
+  }
+  .post-wrap .post-prev {
+    left: 0px;
   }
 }
 @media only screen and (max-width: 640px) {
