--- a/css/main.scss
+++ b/css/main.scss
@@ -708,6 +708,12 @@ video {
         }
     }
 }
+.video-js{
+    padding-top: 56.25%;
+    max-width: 100%;
+    width: 100%;
+    height: 0;
+}
 .vjs-tech{
     height: 100%;
     left: 0;
@@ -715,12 +721,6 @@ video {
     top: 0;
     width: 100%;
 }
-.video-js{
-    padding-top: 41.66666666666667%;
-    max-width: 100%;
-    width: 100%;
-}
-
 
 
 
