--- a/css/main.css
+++ b/css/main.css
@@ -2829,17 +2829,18 @@ video {
   transform: rotate(180deg) translateX(-3px);
 }
 
+.video-js {
+  padding-top: 56.25%;
+  max-width: 100%;
+  width: 100%;
+  height: 0;
+}
+
 .vjs-tech {
   height: 100%;
   left: 0;
   position: absolute;
   top: 0;
-  width: 100%;
-}
-
-.video-js {
-  padding-top: 41.6666666667%;
-  max-width: 100%;
   width: 100%;
 }
 
