--- a/css/main.scss
+++ b/css/main.scss
@@ -607,14 +607,14 @@ hr{
         }
     }
 }
-video {
-    width: 100%;
-    max-height: 400px;
-    margin: 0 auto;
-    display: block;
-    border-radius: 16px;
-    overflow: hidden;
-}
+// video {
+//     width: 100%;
+//     max-height: 400px;
+//     margin: 0 auto;
+//     display: block;
+//     border-radius: 16px;
+//     overflow: hidden;
+// }
 .post__video{
     border-radius: 16px;
     overflow: hidden;
@@ -709,7 +709,7 @@ video {
     }
 }
 .video-js{
-    padding-top: 56.25%;
+    padding-top: 177%;
     max-width: 100%;
     width: 100%;
     height: 0;
