--- a/css/main.css
+++ b/css/main.css
@@ -2826,6 +2826,18 @@ hr {
   width: 100%;
   height: 0;
 }
+.video-js .vjs-big-play-button {
+  width: 80px;
+  height: 80px;
+  margin-top: -40px;
+  margin-left: -40px;
+  border-radius: 50%;
+  border: 1px solid #fff;
+  background: rgba(43, 51, 63, 0.7) url(../img/play.svg) 26px center no-repeat !important;
+}
+.video-js .vjs-big-play-button span {
+  display: none;
+}
 
 .vjs-tech {
   height: 100%;
