--- a/css/main.scss
+++ b/css/main.scss
@@ -713,6 +713,18 @@ hr{
     max-width: 100%;
     width: 100%;
     height: 0;
+    .vjs-big-play-button{
+        width: 80px;
+        height: 80px;
+        margin-top: -40px;
+        margin-left: -40px;
+        border-radius: 50%;
+        border: 1px solid #fff;
+        background: rgba(43, 51, 63, 0.7) url(../img/play.svg) 26px center no-repeat !important;
+        span{
+            display: none;
+        }
+    }
 }
 .vjs-tech{
     height: 100%;
