--- a/css/main.css
+++ b/css/main.css
@@ -2832,11 +2832,56 @@ hr {
   margin-top: -40px;
   margin-left: -40px;
   border-radius: 50%;
-  border: 1px solid #fff;
+  border: 1px solid #797979;
   background: rgba(43, 51, 63, 0.7) url(../img/play.svg) 26px center no-repeat !important;
+}
+.video-js .vjs-big-play-button:focus {
+  border-color: #ddd;
+  transition: all 0.2s ease-in-out;
 }
 .video-js .vjs-big-play-button span {
   display: none;
+}
+.video-js:hover .vjs-big-play-button {
+  border-color: #ddd;
+  transition: all 0.2s ease-in-out;
+}
+.video-js .vjs-control-bar {
+  height: 100%;
+}
+.video-js .vjs-time-control, .video-js .vjs-fullscreen-control {
+  display: none;
+}
+.video-js.vjs-has-started .vjs-control-bar {
+  display: block;
+}
+.video-js.vjs-has-started .vjs-progress-control {
+  width: auto;
+  position: absolute;
+  bottom: 5px;
+  left: 5px;
+  right: 90px;
+  height: 80px;
+}
+.video-js .vjs-volume-panel {
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
+  width: 80px;
+  height: 80px;
+  transition: none;
+}
+.video-js .vjs-volume-panel .vjs-volume-control {
+  display: none;
+  opacity: 0 !important;
+  visibility: hidden !important;
+  position: absolute !important;
+}
+.video-js .vjs-volume-panel.vjs-volume-panel-horizontal.vjs-hover {
+  width: 80px;
+}
+.video-js .vjs-volume-panel.vjs-volume-panel-horizontal.vjs-hover .vjs-mute-control {
+  width: 80px;
 }
 
 .vjs-tech {
