--- a/css/main.scss
+++ b/css/main.scss
@@ -738,6 +738,7 @@ hr{
     }
     .vjs-control-bar{
         height: 100%;
+        background: transparent;
     }
     .vjs-time-control, .vjs-fullscreen-control{
         display: none;
@@ -752,7 +753,7 @@ hr{
             position: absolute;
             bottom: 5px;
             left: 5px;
-            right: 90px;
+            right: 85px;
             height: 80px;
         }
         
@@ -770,10 +771,63 @@ hr{
             visibility: hidden !important;
             position: absolute !important;
         }
+        .vjs-mute-control{
+            width: 80px !important;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            .vjs-icon-placeholder{
+                width: 40px;
+                height: 40px;
+                display: block;
+                position: relative;
+                &::before{
+                    position: absolute;
+                    width: 20px;
+                    height: 20px;
+                    left: 50%;
+                    top: 50%;
+                    margin-left: -10px;
+                    margin-top: -16px;
+                }
+            }
+        }
         &.vjs-volume-panel-horizontal.vjs-hover{
-            width: 80px;
+            width: 80px !important;
             .vjs-mute-control{
-                width: 80px;
+                width: 80px !important;
+            }
+        }
+    }
+    .vjs-play-control{
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        &.vjs-playing{
+            opacity: 0;
+        }
+        .vjs-control-text{
+            display: none;
+        }
+        .vjs-icon-placeholder{
+            width: 40px;
+            height: 40px;
+            display: block;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            margin-left: -20px;
+            margin-top: -20px;
+            &::before{
+                position: absolute;
+                width: 20px;
+                height: 20px;
+                left: 50%;
+                top: 50%;
+                margin-left: -10px;
+                margin-top: -10px;
             }
         }
     }
