--- a/css/main.scss
+++ b/css/main.scss
@@ -748,16 +748,27 @@ hr{
             display: block;
             
         }
-        .vjs-progress-control{
-            width: auto;
-            position: absolute;
-            bottom: 5px;
-            left: 5px;
-            right: 85px;
-            height: 80px;
+    } 
+    .vjs-progress-control{
+        width: auto;
+        position: absolute;
+        bottom: 5px;
+        left: 5px;
+        right: 85px;
+        height: 80px;
+        .vjs-progress-holder{
+            background: #fff;
+            margin-right: 0 !important;
+        }
+        .vjs-load-progress {
+            background: rgb(255, 0, 0);
         }
         
-    } 
+    }
+    .vjs-load-progress div, .vjs-play-progress {
+        background: #c681f5;
+    }
+    
     .vjs-volume-panel{
         position: absolute;
         bottom: 5px;
@@ -812,22 +823,26 @@ hr{
             display: none;
         }
         .vjs-icon-placeholder{
-            width: 40px;
-            height: 40px;
+            width: 80px;
+            height: 80px;
             display: block;
             position: absolute;
             left: 50%;
             top: 50%;
-            margin-left: -20px;
-            margin-top: -20px;
+            margin-left: -40px;
+            margin-top: -40px;
+            border-radius: 50%;
+            border: 1px solid #797979;
+            background: rgba(43, 51, 63, 0.7) url(../img/play.svg) 26px center no-repeat !important;
             &::before{
-                position: absolute;
-                width: 20px;
-                height: 20px;
-                left: 50%;
-                top: 50%;
-                margin-left: -10px;
-                margin-top: -10px;
+                display: none;
+            }
+            
+        }
+        &:hover{
+            .vjs-icon-placeholder{
+                border-color: #ddd;
+                transition: $transition;
             }
         }
     }
