--- a/css/main.css
+++ b/css/main.css
@@ -2826,6 +2826,11 @@ hr {
   width: 100%;
   height: 0;
 }
+.video-js .vjs-poster {
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center center;
+}
 .video-js .vjs-big-play-button {
   width: 80px;
   height: 80px;
