--- a/css/main.css
+++ b/css/main.css
@@ -2792,22 +2792,33 @@ hr {
   clip: auto;
   position: static;
   height: 12px;
+  font-family: "medium", sans-serif;
 }
 .post__audio .video-js .vjs-remaining-time .vjs-control-text + span {
   padding: 0 5px;
   height: 12px;
+  font-family: "medium", sans-serif;
 }
 .post__audio .video-js .vjs-remaining-time .vjs-remaining-time-display {
   height: 12px;
+  font-family: "medium", sans-serif;
 }
 .post__audio .video-js .vjs-current-time {
   display: flex;
   position: absolute;
-  bottom: 20px;
-  left: 20px;
+  bottom: 24px;
+  left: 24px;
   padding: 0;
   width: 80px;
   height: 80px;
+  align-items: flex-end;
+  padding: 16px 8px 8px;
+}
+.post__audio .video-js .vjs-current-time .vjs-current-time-display {
+  font-size: 12px;
+  height: 12px;
+  line-height: 12px;
+  font-family: "medium", sans-serif;
 }
 .post__audio .video-js .vjs-volume-panel {
   display: none;
