--- a/css/_query.scss
+++ b/css/_query.scss
@@ -49,7 +49,7 @@
     .post{
         margin-bottom: 40px;
     }
-    .post__pic, .slick-list, .post__video {
+    .post__pic, .slick-list, .post__video, .post__audio {
         border-radius: 0;
     }
     .post__action {
