--- a/css/main.css
+++ b/css/main.css
@@ -3024,6 +3024,26 @@ hr {
   width: 100%;
 }
 
+.user__private {
+  background: #F5F5F7;
+  border-radius: 32px;
+  padding: 32px;
+  text-align: center;
+  margin-top: 24px;
+}
+.user__private-title {
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 16px;
+  font-family: "demi", sans-serif;
+}
+.user__private-desc {
+  width: 240px;
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 24px;
+}
+
 @media only screen and (max-width: 1300px) {
   .post-wrap .post-next {
     right: -60px;
