--- a/css/main.scss
+++ b/css/main.scss
@@ -937,6 +937,25 @@ hr{
     top: 0;
     width: 100%;
 }
+.user__private {
+    background: #F5F5F7;
+    border-radius: 32px;
+    padding: 32px;
+    text-align: center;
+    margin-top: 24px;
+    &-title {
+        font-size: 16px;
+        line-height: 20px;
+        margin-bottom: 16px;
+        font-family: $f700;
+    }
+    &-desc {
+        width: 240px;
+        font-size: 16px;
+        line-height: 20px;
+        margin-bottom: 24px;
+    }
+}
 
 
 
