--- a/css/main.css
+++ b/css/main.css
@@ -2735,7 +2735,6 @@ hr {
 .post__audio {
   width: 100%;
   position: relative;
-  background: url(../img/microphone.png) center center no-repeat, linear-gradient(41.19deg, #7321E8 9.55%, #EAAAFA 95.15%), #D9D9D9;
   border-radius: 16px;
   overflow: hidden;
 }
@@ -2766,7 +2765,7 @@ hr {
 }
 .post__audio .video-js {
   padding-top: 100%;
-  background: url(../img/microphone.png) center center no-repeat, linear-gradient(41.19deg, #7321E8 9.55%, #EAAAFA 95.15%), #D9D9D9;
+  background: transparent;
 }
 .post__audio .video-js .vjs-control-bar {
   display: block;
