--- a/css/main.scss
+++ b/css/main.scss
@@ -622,7 +622,7 @@ hr{
     width: 100%;
     //padding-top: 100%;
     position: relative;
-    background: url(../img/microphone.png) center center no-repeat, linear-gradient(41.19deg, #7321E8 9.55%, #EAAAFA 95.15%), #D9D9D9;
+    //background: url(../img/microphone.png) center center no-repeat, linear-gradient(41.19deg, #7321E8 9.55%, #EAAAFA 95.15%), #D9D9D9;
     border-radius: 16px;
     overflow: hidden;
     // audio{
@@ -667,7 +667,7 @@ hr{
     }
     .video-js {
         padding-top: 100%;
-        background: url(../img/microphone.png) center center no-repeat, linear-gradient(41.19deg, #7321E8 9.55%, #EAAAFA 95.15%), #D9D9D9;
+        background:transparent;
         .vjs-control-bar{
             display: block;
         }
