--- a/css/main.scss
+++ b/css/main.scss
@@ -103,6 +103,7 @@ hr{
 }
 .page{
     background: url(../img/page_bg.png) left top / 100% no-repeat;
+    min-height: calc(100vh - 80px);
 }
 .user {
     flex-direction: column;
@@ -938,12 +939,13 @@ hr{
     top: 0;
     width: 100%;
 }
-.user__private {
+.window {
     background: #F5F5F7;
     border-radius: 32px;
     padding: 32px;
     text-align: center;
-    margin-top: 24px;
+    width: 300px;
+    margin: 24px auto 0;
     &-title {
         font-size: 16px;
         line-height: 20px;
@@ -954,7 +956,14 @@ hr{
         width: 240px;
         font-size: 16px;
         line-height: 20px;
-        margin-bottom: 24px;
+        margin: 0;
+    }
+    .btn{
+        margin-top: 24px;
+    }
+    &-icon{
+        width: 40px;
+        margin: 0 auto 20px;
     }
 }
 
