--- a/css/main.scss
+++ b/css/main.scss
@@ -464,10 +464,26 @@ hr{
     &__head-ava {
         width: 40px;
         height: 40px;
-        border-radius: 12px;
         margin-right: 16px;
+        position: relative;
+        &_online{
+            &:after {
+                display: block;
+                content: "";
+                position: absolute;
+                width: 8px;
+                height: 8px;
+                border: 2px solid #fff;
+                border-radius: 50%;
+                bottom: -3px;
+                right: -3px;
+                background: #27D34C;
+            }
+        }
     }
-    &__head-info {}
+    &__head-pic {
+        border-radius: 12px;
+    }
     &__head-nick {
         display: flex;
         align-items: center;
