--- a/css/_query.scss
+++ b/css/_query.scss
@@ -162,6 +162,10 @@
             left: -0px;
         } 
     }
+    .post__head_single{
+        margin: 0 10px 16px;
+        padding: 5px !important;
+    }
 }
 @media only screen and (max-width: 640px) {
     .container{
