--- a/css/_query.scss
+++ b/css/_query.scss
@@ -27,7 +27,7 @@
         display: block;
         width: 102px;
         height: 16px;
-        background: url(../img/logo_min.png) center center no-repeat;
+        background: url(../img/logo_min.svg) left center / contain no-repeat;
     }
     .login, .app-group, hr{
         display: none;
