--- a/css/main.css
+++ b/css/main.css
@@ -2166,7 +2166,7 @@ body {
   display: block;
   width: 218px;
   height: 48px;
-  background: url(../img/logo.svg) center center no-repeat;
+  background: url(../img/logo.svg) center center/contain no-repeat;
 }
 
 .app-group {
@@ -3100,7 +3100,7 @@ hr {
     display: block;
     width: 102px;
     height: 16px;
-    background: url(../img/logo_min.png) center center no-repeat;
+    background: url(../img/logo_min.svg) left center/contain no-repeat;
   }
   .login, .app-group, hr {
     display: none;
