--- a/css/main.scss
+++ b/css/main.scss
@@ -52,7 +52,7 @@ body {
     display: block;
     width: 218px;
     height: 48px;
-    background: url(../img/logo.svg) center center no-repeat;
+    background: url(../img/logo.svg) center center / contain no-repeat;
 }
 .app-group {
     position: absolute;
